# hyperlane-monorepo

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  README.md  package.json
.github/: ct.yaml  readme.md
.github/docs/: readme.md
.github/workflows/: agent-release-artifacts.yml  e2e.yml  node.yml  ortege-docker.yml  rust-helm-release.yml  rust-helm-test.yml  sync.yml
rust/: .gitignore  Cargo.toml  README.md  relayer.env  scraper.env  validator.env
rust/config/: z_ortege_testnet_config.json
rust/helm/agent-common/: values.yaml
rust/helm/hyperlane-agent/: values.yaml
rust/soroban/: Cargo.toml  README.md
rust/soroban/contracts/interchain-gas-paymaster/: Cargo.toml
rust/soroban/contracts/interchain-gas-paymaster/src/: lib.rs
rust/soroban/contracts/storagegasoracle/: Cargo.toml
rust/soroban/contracts/storagegasoracle/src/: lib.rs
rust/soroban/libs/abstractpostdispatchhook/: Cargo.toml
rust/soroban/libs/abstractpostdispatchhook/src/: lib.rs
rust/soroban/libs/iinterchain-security-module/: Cargo.toml
rust/soroban/libs/iinterchain-security-module/src/: lib.rs
rust/soroban/libs/imailbox/: Cargo.toml
rust/soroban/libs/imailbox/src/: lib.rs
rust/soroban/libs/imessage-recipient/: Cargo.toml
rust/soroban/libs/imessage-recipient/src/: lib.rs
rust/soroban/libs/indexed/: Cargo.toml
rust/soroban/libs/indexed/src/: lib.rs
rust/soroban/libs/interchain-gas-paymaster/src/: lib.rs
rust/soroban/libs/legacy-checkpoint/: Cargo.toml
rust/soroban/libs/legacy-checkpoint/src/: lib.rs
rust/soroban/libs/legacy-multisig-ism-metadata/: Cargo.toml
rust/soroban/libs/legacycheckpoint/: Cargo.toml
rust/soroban/libs/legacycheckpoint/src/: lib.rs
rust/soroban/libs/legacymultisigismmetadata/: Cargo.toml
rust/soroban/libs/legacymultisigismmetadata/src/: lib.rs
rust/soroban/libs/merkleproof/: Cargo.toml  README.md
rust/soroban/libs/merkleproof/src/: lib.rs
rust/soroban/libs/merkletree/: Cargo.toml  README.md
rust/soroban/libs/merkletree/src/: lib.rs  tests.rs
rust/soroban/libs/message/: Cargo.toml
rust/soroban/libs/message/src/: lib.rs  tests.rs
rust/soroban/libs/standardhookmetadata/: Cargo.toml
rust/soroban/libs/standardhookmetadata/src/: lib.rs
rust/soroban/libs/typecasts/: Cargo.toml
rust/soroban/libs/typecasts/src/: lib.rs  tests.rs
rust/soroban/mailbox/: Cargo.toml
rust/soroban/mailbox/src/: lib.rs  tests.rs
rust/soroban/merkleproof/: Cargo.toml
rust/soroban/merkleproof/merkle-tree/: README.md  buildTree.js  generateProof.js  utils.js
rust/soroban/merkletree/: Cargo.toml
rust/soroban/multisig/legacy-multisig-ism/: Cargo.toml
rust/soroban/multisig/legacy-multisig-ism/src/: lib.rs
rust/soroban/multisig/legacymultisigism/: Cargo.toml
rust/soroban/multisig/legacymultisigism/src/: lib.rs
rust/soroban/openzeppelin/address/: Cargo.toml
rust/soroban/openzeppelin/address/src/: lib.rs  tests.rs
rust/soroban/openzeppelin/ecdsa/: Cargo.toml
rust/soroban/openzeppelin/ecdsa/src/: lib.rs  tests.rs
rust/soroban/openzeppelin/enumerableset/: Cargo.toml
rust/soroban/openzeppelin/enumerableset/src/: lib.rs  tests.rs
rust/soroban/openzeppelin/initializable/: Cargo.toml
rust/soroban/openzeppelin/initializable/src/: lib.rs  tests.rs
rust/soroban/openzeppelin/openecdsa/: Cargo.toml  README.md
rust/soroban/openzeppelin/ownable/: Cargo.toml  test.txt
rust/soroban/openzeppelin/ownable/src/: lib.rs  tests.rs
rust/soroban/openzeppelin/ownableupgradeable/: Cargo.toml
rust/soroban/openzeppelin/ownableupgradeable/src/: lib.rs  tests.rs
rust/soroban/upgrade/versioned/: Cargo.toml
rust/soroban/upgrade/versioned/src/: lib.rs
solidity/: package.json
solidity/test/: mailbox.test.ts  message.test.ts  mockMailbox.test.ts  router.test.ts  testSendReceiver.test.ts  testrecipient.test.ts
solidity/test/isms/: legacyMultisigIsm.test.ts
solidity/test/lib/: mailboxes.ts
typescript/helloworld/: .prettierrc  package.json
typescript/helloworld/contracts/: HelloWorld.sol
typescript/helloworld/src/app/: app.ts
typescript/helloworld/src/deploy/: check.ts  config.ts  deploy.ts
typescript/helloworld/src/scripts/: check.ts  deploy.ts
typescript/helloworld/src/test/: deploy.test.ts  helloworld.test.ts
typescript/infra/: hardhat.config.ts  package.json
typescript/infra/config/: aggregationIsm.ts  multisigIsm.ts  utils.ts
typescript/infra/config/environments/: utils.ts
typescript/infra/scripts/: announce-validators.ts  check-deploy.ts  check-rpc-urls.ts  debug-message.ts  deploy.ts  list-validator-checkpoint-indices.ts  safe-delegate.ts  utils.ts  verify-validators.ts  verify.ts
typescript/infra/scripts/funding/: fund-deterministic-key-from-deployer.ts  fund-keys-from-deployer.ts  reclaim-from-igp.ts
typescript/infra/scripts/gas-oracle/: compare-token-exchange-rates.ts  update-storage-gas-oracle.ts  utils.ts
typescript/infra/scripts/helloworld/: check.ts  deploy.ts  kathy.ts  utils.ts
typescript/infra/scripts/middleware/: circle-relayer.ts  portal-relayer.ts
typescript/infra/src/: deploy.ts
typescript/infra/src/agents/: agent.ts  gcp.ts  index.ts  key-utils.ts  keys.ts
typescript/infra/src/config/: agent.ts  chain.ts  environment.ts  funding.ts  gas-oracle.ts  helloworld.ts  middleware.ts
typescript/infra/src/deployment/: deploy.ts
typescript/infra/src/govern/: HyperlaneAppGovernor.ts  HyperlaneCoreGovernor.ts  HyperlaneIgpGovernor.ts  ProxiedRouterGovernor.ts  multisend.ts
typescript/infra/src/scraper/: deploy.ts
typescript/infra/src/testcontracts/: testquerysender.ts  testrecipient.ts
typescript/infra/src/utils/: fork.ts  metrics.ts  safe.ts  utils.ts
typescript/sdk/: README.md  package.json
typescript/sdk/src/: contracts.ts
typescript/sdk/src/agents/: types.ts
typescript/sdk/src/app/: HyperlaneApp.ts  MultiProtocolApp.ts
typescript/sdk/src/consts/: chainMetadata.ts  chains.ts
typescript/token/: package.json
typescript/token/src/: app.ts  config.ts  deploy.ts
typescript/token/test/: erc20.test.ts  erc721.test.ts
typescript/utils/: package.json
(+114 files in other folders)
