[workspace]
resolver = "2"
members = [
    "openzeppelin/ownable",
    "openzeppelin/ecdsa",
    "openzeppelin/enumerableset",
    "libs/interchain-gas-paymaster",
    "libs/abstractpostdispatchhook",
    "libs/indexed",
    "libs/iinterchain-security-module",
    "libs/legacy-checkpoint",
    "libs/legacy-multisig-ism-metadata",
    "libs/merkleproof",
    "libs/merkletree",
    "libs/message",
    "libs/standardhookmetadata",
    "libs/typecasts",
    "multisig/legacy-multisig-ism",
    "upgrade/versioned",
]

[workspace.dependencies]
sha3 = "0.10.8"
soroban-sdk = "20.0.0-rc2"
tiny-keccak = "2.0.2"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true