[package]
name = "imailbox"
version = "0.1.0"
edition = "2021"

[dependencies]
soroban-sdk = { workspace = true }
iinterchain_security_module = { path = "../iinterchain-security-module" }

[dev_dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
