[package]
name = "legacy_checkpoint"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
sha3 = { workspace = true }
soroban-sdk = { workspace = true }
openecdsa = {path = "../../openzeppelin/openecdsa" }

[dev_dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]