[package]
name = "message"
version = "0.1.0"
edition = "2021"

[dependencies]
soroban-sdk = { workspace = true }
tiny-keccak  = { workspace = true, features = ["keccak"] }

[dev_dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]