[package]
name = "legacy_multisig_ism"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha3 = "0.10.8"
secp256k1 = { version = "0.27.0", features = ["recovery"] }
soroban-sdk = "0.9.2"
ecdsa = {path = "../../openzeppelin/ecdsa" }
ownable = { path = "../../openzeppelin/ownable" }
enumerableset = { path = "../../openzeppelin/enumerableset" }
legacy_checkpoint = { path = "../../libs/legacycheckpoint" }
legacy_multisig_ism_metadata = { path = "../../libs/legacymultisigismmetadata" }
merkletree = { path = "../../libs/merkletree" }
message = { path = "../../libs/message" }
tiny-keccak = { version = "2.0", features = ["keccak"] }

[dev_dependencies]
soroban-sdk = { version = " 0.9.2", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true