[package]
name = "legacy_multisig_ism"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
sha3 = { workspace = true }
secp256k1 = { version = "0.27.0", features = ["recovery"] }
soroban-sdk = { workspace = true }
openecdsa = {path = "../../openzeppelin/openecdsa" }
ownable = { path = "../../openzeppelin/ownable" }
enumerableset = { path = "../../openzeppelin/enumerableset" }
iinterchain_security_module = { path = "../../libs/iinterchain-security-module" }
legacy_checkpoint = { path = "../../libs/legacycheckpoint" }
legacy_multisig_ism_metadata = { path = "../../libs/legacymultisigismmetadata" }
merkletree = { path = "../../libs/merkletree" }
message = { path = "../../libs/message" }
tiny-keccak = { workspace = true, features = ["keccak"] }

[dev_dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]