[package]
name = "ecdsa"
version = "0.1.0"
edition = "2021"

[dependencies]
sha3 = { workspace = true }
secp256k1 = { version = "0.27.0", features = ["recovery"] }
soroban-sdk = { workspace = true }

[dev_dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]